[package]
name = "encoding_bench"
version = "0.1.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]

[features]
third_party = ["encoding", "libc"]
uconv = ["libc"]
simd-accel = ["encoding_rs/simd-accel"]
no-static-ideograph-encoder-tables = ["encoding_rs/no-static-ideograph-encoder-tables"]

[dependencies]
encoding_rs = { path = "../encoding_rs/" }
encoding = { version = "0.2.33", optional = true }
libc = { version = "0.2.16", optional = true }

